// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts bound text to JSON 1`] = `
Object {
  ":value": "some text",
  "id": Any<String>,
  "type": "$text",
}
`;

exports[`converts text to JSON 1`] = `
Object {
  "id": Any<String>,
  "type": "$text",
  "value": "some text",
}
`;
